--- a/css/custom.css
+++ b/css/custom.css
@@ -430,3 +430,44 @@ input {
     left: 23%;
     top: 200px;
 }
+.dialogWrap {
+    display: none;
+}
+.dialogWrap .dialogOverlay{
+    position: fixed;
+    width:100%;
+    height: 100%;
+    top:0;
+    left:0;
+    background-color: rgba(0, 0, 0, 0.3);
+    z-index: 1;
+}
+.dialogWrap .dialog{
+    position: fixed;
+    width: 300px;
+    max-height: 250px;
+    background-color: #fff;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+    z-index: 2;
+    border-radius: 6px;
+   
+}
+.dialogWrap .dialog .content{
+    padding: 10px;
+    line-height: 25px;
+    font-size: 17px;
+}
+.dialogWrap .dialog .content p{
+    padding-bottom: 10px;
+}
+.dialogWrap .dialog .oper{
+    padding: 15px;
+    text-align: center;
+    border-top: 1px solid #e3e3e3;
+}
+.dialogWrap .dialog  .oper a{
+    display: block;
+    color: #03a9f4;
+}
