--- a/css/custom.css
+++ b/css/custom.css
@@ -463,7 +463,7 @@ input {
     padding-bottom: 10px;
 }
 .dialogWrap .dialog .content p.red{
-    color:red;
+    color:#F44336;
 }
 .dialogWrap .dialog .oper{
     padding: 15px;
@@ -476,4 +476,5 @@ input {
 }
 .line{
     text-decoration: underline;
+    color:#2196F3;
 }
